hotfix: resetting the songlist now correctly updates the ban status (to active) + word wrap added

--- a/front-end/src/Random.css
+++ b/front-end/src/Random.css
@@ -46,6 +46,7 @@ a{
 
 .Song-card{
   color: white;
+  word-wrap: break-word;
   text-align: center;
   display:inline-block;
   position: relative;
